db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/net: "true"
    io.kompose.service: db
  name: db
spec:
  containers:
    - env:
        - name: MYSQL_DATABASE
          value: wordpress
        - name: MYSQL_PASSWORD
          value: wordpress
        - name: MYSQL_ROOT_PASSWORD
          value: wordpress
        - name: MYSQL_USER
          value: wordpress
      image: mysql:5.7
      name: db
      resources: {}
      volumeMounts:
        - mountPath: /var/lib/mysql
          name: db-data
  restartPolicy: OnFailure
  volumes:
    - name: db-data
      persistentVolumeClaim:
        claimName: db-data
status: {}
