wordpress-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/net: "true"
    io.kompose.service: wordpress
  name: wordpress
spec:
  containers:
    - env:
        - name: WORDPRESS_DB_HOST
          value: db:3306
        - name: WORDPRESS_DB_PASSWORD
          value: wordpress
        - name: WORDPRESS_DB_USER
          value: wordpress
      image: wordpress:latest
      name: wordpress
      ports:
        - containerPort: 80
      resources: {}
      volumeMounts:
        - mountPath: /var/www/html
          name: wordpress-data
  restartPolicy: OnFailure
  volumes:
    - name: wordpress-data
      persistentVolumeClaim:
        claimName: wordpress-data
status: {}
